- avconv -deinterlace option removed, the yadif filter should be used instead
- Apple Intermediate Codec decoder
- Escape 130 video decoder
- support for slice multithreading in libavfilter
- VC-1 interlaced B-frame support
- support for WavPack muxing (raw and in Matroska)
- Go2Webinar decoder
- WavPack encoding through libwavpack


version 9:
- av_basename and av_dirname
- adobe and limelight publisher authentication in RTMP
- VDPAU hardware acceleration through normal hwaccel
- SRTP support


version 9_beta3:
- ashowinfo audio filter
- 24-bit FLAC encoding
- audio volume filter
- deprecated the avconv -vol option. the volume filter is to be used instead.
- multi-channel ALAC encoding up to 7.1
- TAK demuxer, parser, and decoder
- adaptive frame-level multithreading for H.264


version 9_beta2:
- metadata (INFO tag) support in WAV muxer
- support for building DLLs using MSVC
- remove avserver daemon mode
- support building on the Plan 9 operating system
- ffv1: support version 1.3


version 9_beta1:

- XWD encoder and decoder
- Support for fragmentation in the mov/mp4 muxer
- ISMV (Smooth Streaming) muxer
- CDXL demuxer and decoder
- Apple ProRes encoder
- Sun Rasterfile Encoder
- remove libpostproc
- ID3v2 attached pictures reading and writing
- WMA Lossless decoder
- XBM encoder
- RealAudio Lossless decoder
- ZeroCodec decoder
- drop support for avconv without libavfilter
- add libavresample audio conversion library
- audio filters support in libavfilter and avconv
- add fps filter
- audio split filter
- audio mix filter
- avprobe output is now standard INI or JSON. The old format can still
  be used with -of old.
- Indeo Audio decoder
- channelsplit audio filter
- RTMPT protocol support
- iLBC encoding/decoding via libilbc
- Microsoft Screen 1 decoder
- join audio filter
- audio channel mapping filter
- Microsoft ATC Screen decoder
- RTSP listen mode
- TechSmith Screen Codec 2 decoder
- AAC encoding via libfdk-aac
- Microsoft Expression Encoder Screen decoder